<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.3.0</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>
	<groupId>gov.cdc.izgw</groupId>
	<version>2.1.0-IGDD-1505_Refactor_Hub_and_Core-SNAPSHOT</version>
	<name>IZ Gateway Core 2.0</name>
	<artifactId>izgw-core</artifactId>
	<description>IZ Gateway Core contains the core code for the IZ Gateway Hub and Transformation services</description>
	<packaging>jar</packaging>
	<properties>
		<java.version>17</java.version> <!-- 17 needs a certified encryption module -->
		<timestamp>${maven.build.timestamp}</timestamp>
		<maven.build.timestamp.format>yyyyMMddHHmm</maven.build.timestamp.format>
		<project.java.package>${project.groupId}</project.java.package>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.build.finalName>${project.artifactId}-${project.version}-${timestamp}</project.build.finalName>
		<image.tag>${project.build.finalName}</image.tag>
		<buildno>${timestamp}</buildno>
	</properties>
	<dependencies>
		<dependency>
			<groupId>io.tus.java.client</groupId>
			<artifactId>tus-java-client</artifactId>
			<version>0.5.0</version>
		</dependency>
		<dependency>
			<groupId>me.desair.tus</groupId>
			<artifactId>tus-java-server</artifactId>
			<version>1.0.0-3.0</version>
		</dependency>
		<dependency>
			<groupId>commons-fileupload</groupId>
			<artifactId>commons-fileupload</artifactId>
			<version>1.5</version>
		</dependency>
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
			<version>[2.2.0,)</version>
		</dependency>
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-starter-webflux-ui</artifactId>
			<version>[2.2.0,)</version>
		</dependency>
		<dependency>
			<groupId>org.codehaus.woodstox</groupId>
			<artifactId>stax2-api</artifactId>
			<version>4.2.2</version>
		</dependency>
		<dependency>
			<groupId>com.mysql</groupId>
			<artifactId>mysql-connector-j</artifactId>
			<version>[8.2.0,)</version> <!--$NO-MVN-MAN-VER$-->
		</dependency>
		<dependency>
			<groupId>com.zaxxer</groupId>
			<artifactId>HikariCP</artifactId>
		</dependency>
		<dependency>
			<groupId>org.hibernate.orm</groupId>
			<artifactId>hibernate-core</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>provided</scope>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>17</source>
					<target>17</target>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>${lombok.version}</version>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<executions>
					<execution>
						<id>enforce-java-version</id>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<executions>
					<execution>
						<id>default-jar</id>
					</execution>
					<execution>
						<id>test-jar</id>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>jar-sources</id>
					</execution>
					<execution>
						<id>test-jar-sources</id>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<useSystemClassLoader>true</useSystemClassLoader>
					<reuseForks>true</reuseForks>
					<testFailureIgnore>false</testFailureIgnore>
					<systemPropertyVariables>
						<elastic.api.key>${env.ELASTIC_API_KEY}</elastic.api.key>
					</systemPropertyVariables>
					<argLine>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED</argLine>
					<includes>
						<include>**/*Tests.java</include>
					</includes>
				</configuration>
			</plugin>
			<plugin>
				<!-- Since all libraries are deliverable, this should in fact be
                    the only dependency check required.
                 -->
				<groupId>org.owasp</groupId>
				<artifactId>dependency-check-maven</artifactId>
				<!-- 9.0 line uses NVD API and requires a key, which has flakey response right now -->
				<version>8.4.3</version>
				<executions>
					<execution>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<!--nvdApiKey>${env.NVDAPIKEY}</nvdApiKey-->
					<formats>
						<format>html</format>
						<format>json</format>
					</formats>
					<!-- Disable .NET Analyzer -->
					<assemblyAnalyzerEnabled>false</assemblyAnalyzerEnabled>
					<nugetconfAnalyzerEnabled>false</nugetconfAnalyzerEnabled>
					<nuspecAnalyzerEnabled>false</nuspecAnalyzerEnabled>
					<!-- Fail builds where this is used to 7 High to Critical -->
					<failBuildOnCVSS>7</failBuildOnCVSS>
					<!-- Don't fail on error (for cases where CVE REPO is bad) -->
					<failOnError>false</failOnError>
					<skip>${skipDependencyCheck}</skip>
					<suppressionFile>${project.basedir}/dependency-suppression.xml</suppressionFile>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.13.0</version>
					<dependencies>
						<!--dependency>
                            <groupId>org.codehaus.plexus</groupId>
                            <artifactId>plexus-compiler-eclipse</artifactId>
                            <version>2.15.0</version>
                        </dependency-->
						<dependency>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>${lombok.version}</version>
						</dependency>
					</dependencies>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	<distributionManagement>
		<repository>
			<id>github</id>
			<name>GitHub Packages</name>
			<url>https://maven.pkg.github.com/IZGateway/izgw-core</url>
		</repository>
	</distributionManagement>
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.6.1</version>
				<reportSets>
					<reportSet>
						<reports>
							<report>analyze-report</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
		</plugins>
	</reporting>
</project>
